Removed test user data from sign-up & login page (Now in Readme)

--- a/src/app/components/shared/welcome/welcome.component.html
+++ b/src/app/components/shared/welcome/welcome.component.html
@@ -9,6 +9,7 @@
       <p class="subtitle">Sign in to continue your green journey</p>
     </div>
     
+    <!-- Test Credentials - Commented out for production
     <div class="hint-box">
       <p class="hint-title"><span class="material-symbols-outlined">key</span> Test Credentials</p>
       <div class="credentials-grid">
@@ -30,6 +31,7 @@
         </div>
       </div>
     </div>
+    -->
     
     <form class="login-form" (ngSubmit)="login()">
       <div class="form-group">
