--- a/src/app/components/member/events/events.component.html
+++ b/src/app/components/member/events/events.component.html
@@ -16,8 +16,8 @@
         </div>
         <div class="event-details">
           <h3>{{ event.title }}</h3>
-          <p class="event-location">📍 {{ event.location }}</p>
-          <p class="event-time">🕐 {{ event.time }}</p>
+          <p class="event-location"><span class="material-symbols-outlined">location_on</span> {{ event.location }}</p>
+          <p class="event-time"><span class="material-symbols-outlined">schedule</span> {{ event.time }}</p>
           <p class="event-description">{{ event.description }}</p>
           <div class="event-footer">
             <span class="attendees">{{ event.attendees }} attending</span>
