--- a/src/app/components/shared/signup/signup.component.html
+++ b/src/app/components/shared/signup/signup.component.html
@@ -4,6 +4,10 @@
   </div>
   
   <div class="content">
+    <div class="logo-section">
+      <img src="./assets/logov2.png" alt="Time For Green Logo" class="brand-logo">
+    </div>
+    
     <div class="form-header">
       <h1 class="form-title">Let's get you on board</h1>
       <p class="form-subtitle">Time for you to go green!</p>
