--- a/src/app/components/shared/splash/splash.component.html
+++ b/src/app/components/shared/splash/splash.component.html
@@ -66,7 +66,7 @@
         <!-- Header -->
         <div class="video-header">
           <div class="header-left">
-            <img src="./assets/logov2.png" alt="Logo" class="header-logo">
+            <img src="./assets/logobv3.png" alt="Logo" class="header-logo">
             <div class="header-brand">
               <span class="header-title">Time For Green</span>
               <span class="header-subtitle">Environmental Documentary</span>
