--- a/src/app/components/shared/welcome/welcome.component.html
+++ b/src/app/components/shared/welcome/welcome.component.html
@@ -4,6 +4,10 @@
   </div>
   
   <div class="content">
+    <div class="logo-section">
+      <img src="./assets/logov2.png" alt="Time For Green Logo" class="brand-logo">
+    </div>
+    
     <div class="form-header">
       <h1 class="greeting">Welcome Back!</h1>
       <p class="subtitle">Sign in to continue your green journey</p>
